products getwithattrs create model sql openapi
